[package]
name = "kanau-auth"
version = "0.1.0"
edition = "2024"

[dependencies]
kanau = "0.2"
rand = "0.9"
jsonwebtoken = "9.2"
fast32 = "1.0.3"
ring = "0.17"
sha2 = "0.10"
md5 = "0.8"
reqwest = { version = "0.12", features = ["json"] }
compact_str = {version = "0.9", features = ["serde", "rkyv"]}
tracing = "0.1"
thiserror = "2.0"
bcrypt = "0.17.0"
argon2 = {version = "0.5", features = ["std"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
serde_urlencoded = "0.7"